--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <div class="top-container">
     <img src="Images/clouds.png" alt="cloud-img" class="top-cloud">
     <h1>I'm Ososeh,</h1>
-    <p>a <span class="fro">fro</span>nt end web developer</p>
+    <p class="web-developer">a <span class="fro">fro</span>nt end web developer</p>
     <img src="Images/clouds.png" alt="cloud-img" class="bottom-cloud">
     <img src="Images/mountain.png" alt="mountain-img" class="mountains">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="Images/champion.jpg" alt="Ososeh" class="Ososeh">
+      <img src="Images/champion.jpg" alt="Ososeh" class="Ososeh-img">
       <h2>Hello.</h2>
       <p>I am a front-end developer and a prolific football player. I love to play a lot of video games and I listen to good music.</p>
     </div>
@@ -29,14 +29,14 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="trophy" src="Images/trophy.jpg" alt="Trophy">
+        <img class="trophy-img" src="Images/csc rebels.jpg" alt="Trophy">
         <h3>Design and Development</h3>
-        <p>I started learning to code when my friend influenced me to learn Python with him and when I found out that it was interesting to learn. I had to check the internet and discovered that there were many programming languages to learn. Then, I started this web development course, I can't get tired of learning it and I've developed skills. </p>
+        <p class="l">I started learning to code when my friend influenced me to learn Python with him and when I found out that it was interesting to learn. I had to check the internet and discovered that there were many programming languages to learn. Then, I started this web development course, I can't get tired of learning it and I've developed skills. </p>
       </div>
       <div class="skill-row">
-        <img class="programming" src="Images/programming.png" alt="">
-        <h3>Other Skils</h3>
-        <p>I'm a gamer. I also play football which is what I love the most and I play a position as a centre forward.</p>
+        <img class="programming-img" src="Images/programming.png" alt="">
+        <h3>Other Skills</h3>
+        <p class="gamer">I'm a gamer. I also play football which is what I love the most and I play a position as a centre forward.</p>
       </div>
     </div>
     <hr>
@@ -50,9 +50,9 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/ebewele-ososeh-0a2bb61b8/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/Ososeh09">Twitter</a>
+    <a class="footer-link" href="https://github.com/Ososeh">GitHub</a>
     <p>© 2022  Ebewele Ososeh.</p>
   </div>
 
