--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="profile">
       <img src="Images/champion.jpg" alt="Ososeh" class="Ososeh-img">
       <h2>Hello.</h2>
-      <p>I am a front-end developer and a prolific football player. I love to play a lot of video games and I listen to good music.</p>
+      <p class="intro">I am a front-end developer and a prolific football player. I love to play a lot of video games and I listen to good music.</p>
     </div>
     <hr>
     <div class="skills">
@@ -43,7 +43,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>How may I be of service to you?</h3>
-      <p>You can contact or communicate with me through the following platforms below. Also, I'm available for jobs relating to web development</p>
+      <p class="contact-message">You can contact or communicate with me through the following platforms below. Also, I'm available for jobs relating to web development</p>
       <a class="btn" href="mailto:ebeweleososeh@gmail.com">CONTACT ME</a>
     </div>
   </div>
@@ -53,7 +53,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/ebewele-ososeh-0a2bb61b8/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/Ososeh09">Twitter</a>
     <a class="footer-link" href="https://github.com/Ososeh">GitHub</a>
-    <p>© 2022  Ebewele Ososeh.</p>
+    <p class="copyright">© 2022  Ebewele Ososeh.</p>
   </div>
 
 
