--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
   <div class="top-container">
+    <img src="Images/sun.png" alt="sun" class="sun">
     <img src="Images/clouds.png" alt="cloud-img" class="top-cloud">
     <h1>I'm Ososeh,</h1>
     <p class="web-developer">a <span class="fro">fro</span>nt end web developer</p>
